--- a/server/pom.xml
+++ b/server/pom.xml
@@ -24,7 +24,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>${groupId}</groupId>
+			<groupId>il.cshaifasweng.OCSFMediatorExample</groupId>
 			<artifactId>entities</artifactId>
 		</dependency>
 	</dependencies>
